# VisionTools

./: .gitignore  .gitmodules  README.md  install.sh  ros_orchestrator.py  run.py  setup.sh  setup_webserver.sh  start_all.sh
backend/: README.md  app.py  database_setup.py  main.py  requirements.txt  ros_node_manager.py
examples/: apriltag_tuning.yaml  camera_tuning.yaml  robot_identity.yaml
frontend/: README.md  app.js  index.html  package-lock.json
frontend/src/: App.css  App.js  App.jsx  index.css  index.jsx  store.js  theme.js
frontend/src/components/: CameraConfig.css  CameraConfig.js  Dashboard.css  Dashboard.js  Sidebar.css  Sidebar.js  Sidebar.jsx
frontend/src/components/cameraConfig/: CameraCard.jsx
frontend/src/components/ros/: RosNodeList.js
frontend/src/components/training/: JobStatusDisplay.js  LogDisplay.js  TrainingForm.js
frontend/src/features/rosNodes/: rosNodesSlice.js
frontend/src/features/training/: trainingSlice.js
frontend/src/screens/: CameraConfig.jsx  Dashboard.jsx  TrainingScreen.js
install_scripts/: setup.sh
orchestrator/: __init__.py  manager.py
scripts/: README.md  convert_manager.py  openvino_converter.py  run_training_pipeline.py
scripts/train_yolov5/: train.py  train_yolov5.sh
src/flir_camera_bringup/: package.xml  setup.cfg  setup.py
src/flir_camera_bringup/config/: dual_blackfly_s_triggered.yaml  dual_chameleon_template.yaml  single_blackfly_s.yaml  single_chameleon_template.yaml
src/flir_camera_bringup/launch/: driver_node.launch.py  flir_camera.launch.py
src/flir_camera_node/: CMakeLists.txt  package.xml
src/flir_camera_node/cfg/: Flir.cfg
src/flir_camera_node/config/: cameras.yaml
src/flir_camera_node/launch/: flir_cameras.launch
src/flir_camera_node/msg/: CameraSettingsRange.msg
src/flir_camera_node/src/: flir_camera_node.cpp
src/robot_launch/: CMakeLists.txt  package.xml
src/robot_launch/launch/: vision_system.launch.py
web/: __init__.py  api.py  app.js  package-lock.json  package.json  views.py
web/static/css/: main.css
web/templates/: about.html  cameraCalibration.html  cameraSetup.html  dashboard.html  layout.html
web/templates/partials/: sidebar.html
web/views/: about.ejs  cameraCalibration.ejs  cameraSetup.ejs  dashboard.ejs  layout.ejs
web/views/partials/: sidebar.ejs
