<?xml version="1.0"?>
<package format="3">
  <name>robot_launch</name>
  <version>1.0.0</version>
  <description>Launch files for FRC vision system</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
</package>
